Crash on selecting edges with multi-edit mode #62749

Closed
opened 2019-03-19 18:35:30 +01:00 by Daniel Salazar · 9 comments
Member

System Information
Operating system: Windows 10 64
Graphics card: GTX1080

Blender Version
Broken: d47f827019

Short description of error
Crash when editing multiple mesh objects and selecting edges

Exact steps for others to reproduce the error
Delete all objects
Create a Suzanne mesh and duplicate it a few times
Select all meshes
Enter edit mode
Switch to Edge Select mode
Select edges from different meshes until it crashes

**System Information** Operating system: Windows 10 64 Graphics card: GTX1080 **Blender Version** Broken: d47f827019f2 **Short description of error** Crash when editing multiple mesh objects and selecting edges **Exact steps for others to reproduce the error** Delete all objects Create a Suzanne mesh and duplicate it a few times Select all meshes Enter edit mode Switch to Edge Select mode Select edges from different meshes until it crashes
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

Added subscriber: @machieb

Added subscriber: @machieb

Can confirm. Crash after selecting fourteen edges on six Suzanne´s. (Windows 10 Pro, GTX 1080Ti)

Can confirm. Crash after selecting fourteen edges on six Suzanne´s. (Windows 10 Pro, GTX 1080Ti)
Germano Cavalcante was assigned by Brecht Van Lommel 2019-03-19 19:10:44 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

Most likely due to recent changes in this area:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x00005555578ef867 in ED_view3d_select_id_read_nearest (UNUSED_vc=0x7fffffffca40, mval=0x7fffffffcaa0, min=1, max=1006, r_dist=0x7fffffffc74c) at /home/brecht/dev/blender/source/blender/editors/space_view3d/view3d_draw_legacy.c:385
385					if (*tbuf && *tbuf >= min && *tbuf < max) {
- 0  0x00005555578ef867 in ED_view3d_select_id_read_nearest (UNUSED_vc=0x7fffffffca40, mval=0x7fffffffcaa0, min=1, max=1006, r_dist=0x7fffffffc74c) at /home/brecht/dev/blender/source/blender/editors/space_view3d/view3d_draw_legacy.c:385
- 1  0x0000555557b8b051 in EDBM_edge_find_nearest_ex (vc=0x7fffffffca40, r_dist=0x7fffffffc88c, r_dist_center=0x0, use_select_bias=true, use_cycle=false, r_eed_zbuf=0x7fffffffc8a8) at /home/brecht/dev/blender/source/blender/editors/mesh/editmesh_select.c:668
- 2  0x0000555557b8bf13 in unified_findnearest (vc=0x7fffffffca40, bases=0x55556b2ad938, bases_len=18, r_base_index=0x7fffffffc9b4, r_eve=0x7fffffffc9c8, r_eed=0x7fffffffc9d0, r_efa=0x7fffffffc9d8) at /home/brecht/dev/blender/source/blender/editors/mesh/editmesh_select.c:992
- 3  0x0000555557b94c78 in EDBM_select_pick (C=0x555563469c58, mval=0x7fffffffcaf0, extend=false, deselect=false, toggle=false) at /home/brecht/dev/blender/source/blender/editors/mesh/editmesh_select.c:2029
- 4  0x0000555557914e6f in view3d_select_exec (C=0x555563469c58, op=0x555563fe5aa8) at /home/brecht/dev/blender/source/blender/editors/space_view3d/view3d_select.c:1994
- 5  0x0000555557915107 in view3d_select_invoke (C=0x555563469c58, op=0x555563fe5aa8, event=0x555563f13108) at /home/brecht/dev/blender/source/blender/editors/space_view3d/view3d_select.c:2029
- 6  0x00005555577a0da8 in wm_operator_invoke (C=0x555563469c58, ot=0x5555638364e8, event=0x555563f13108, properties=0x7fffffffcd90, reports=0x55556b49fe78, poll_only=false, use_last_properties=true) at /home/brecht/dev/blender/source/blender/windowmanager/intern/wm_event_system.c:1343
- 7  0x00005555577a16c9 in wm_operator_call_internal (C=0x555563469c58, ot=0x5555638364e8, properties=0x7fffffffcd90, reports=0x55556b49fe78, context=0, poll_only=false, event=0x555563f13108) at /home/brecht/dev/blender/source/blender/windowmanager/intern/wm_event_system.c:1586
#8  0x00005555577a1917 in WM_operator_call_py (C=0x555563469c58, ot=0x5555638364e8, context=0, properties=0x7fffffffcd90, reports=0x55556b49fe78, is_undo=true) at /home/brecht/dev/blender/source/blender/windowmanager/intern/wm_event_system.c:1664
Most likely due to recent changes in this area: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x00005555578ef867 in ED_view3d_select_id_read_nearest (UNUSED_vc=0x7fffffffca40, mval=0x7fffffffcaa0, min=1, max=1006, r_dist=0x7fffffffc74c) at /home/brecht/dev/blender/source/blender/editors/space_view3d/view3d_draw_legacy.c:385 385 if (*tbuf && *tbuf >= min && *tbuf < max) { - 0 0x00005555578ef867 in ED_view3d_select_id_read_nearest (UNUSED_vc=0x7fffffffca40, mval=0x7fffffffcaa0, min=1, max=1006, r_dist=0x7fffffffc74c) at /home/brecht/dev/blender/source/blender/editors/space_view3d/view3d_draw_legacy.c:385 - 1 0x0000555557b8b051 in EDBM_edge_find_nearest_ex (vc=0x7fffffffca40, r_dist=0x7fffffffc88c, r_dist_center=0x0, use_select_bias=true, use_cycle=false, r_eed_zbuf=0x7fffffffc8a8) at /home/brecht/dev/blender/source/blender/editors/mesh/editmesh_select.c:668 - 2 0x0000555557b8bf13 in unified_findnearest (vc=0x7fffffffca40, bases=0x55556b2ad938, bases_len=18, r_base_index=0x7fffffffc9b4, r_eve=0x7fffffffc9c8, r_eed=0x7fffffffc9d0, r_efa=0x7fffffffc9d8) at /home/brecht/dev/blender/source/blender/editors/mesh/editmesh_select.c:992 - 3 0x0000555557b94c78 in EDBM_select_pick (C=0x555563469c58, mval=0x7fffffffcaf0, extend=false, deselect=false, toggle=false) at /home/brecht/dev/blender/source/blender/editors/mesh/editmesh_select.c:2029 - 4 0x0000555557914e6f in view3d_select_exec (C=0x555563469c58, op=0x555563fe5aa8) at /home/brecht/dev/blender/source/blender/editors/space_view3d/view3d_select.c:1994 - 5 0x0000555557915107 in view3d_select_invoke (C=0x555563469c58, op=0x555563fe5aa8, event=0x555563f13108) at /home/brecht/dev/blender/source/blender/editors/space_view3d/view3d_select.c:2029 - 6 0x00005555577a0da8 in wm_operator_invoke (C=0x555563469c58, ot=0x5555638364e8, event=0x555563f13108, properties=0x7fffffffcd90, reports=0x55556b49fe78, poll_only=false, use_last_properties=true) at /home/brecht/dev/blender/source/blender/windowmanager/intern/wm_event_system.c:1343 - 7 0x00005555577a16c9 in wm_operator_call_internal (C=0x555563469c58, ot=0x5555638364e8, properties=0x7fffffffcd90, reports=0x55556b49fe78, context=0, poll_only=false, event=0x555563f13108) at /home/brecht/dev/blender/source/blender/windowmanager/intern/wm_event_system.c:1586 #8 0x00005555577a1917 in WM_operator_call_py (C=0x555563469c58, ot=0x5555638364e8, context=0, properties=0x7fffffffcd90, reports=0x55556b49fe78, is_undo=true) at /home/brecht/dev/blender/source/blender/windowmanager/intern/wm_event_system.c:1664 ```
Author
Member

It can happen with vertex selection mode but seems easier with edges

It can happen with vertex selection mode but *seems* easier with edges
Germano Cavalcante was unassigned by Brecht Van Lommel 2019-03-19 19:28:57 +01:00
Brecht Van Lommel self-assigned this 2019-03-19 19:28:57 +01:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This issue was referenced by 21f3c95f22

This issue was referenced by 21f3c95f22d458389d1857ee03312cefdfa7ead3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62749
No description provided.